--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.0",
+    "http-status": "^1.7.4",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.447.0",
     "nexios-http": "^1.1.21",
