--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@radix-ui/react-visually-hidden": "^1.1.0",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.7.0",
     "@tanstack/react-query": "^5.59.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -34,6 +36,7 @@
     "react-hook-form": "^7.53.0",
     "sharp": "^0.33.5",
     "sonner": "^1.5.0",
+    "stripe": "^17.1.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
